--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "node -r esm ."
   },
   "dependencies": {
+    "console-log-level": "^1.4.1",
     "cors": "^2.8.5",
     "envalid": "^4.2.2",
     "esm": "^3.2.18",
