--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "ava"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "console-log-level": "^1.4.1",
     "cors": "^2.8.5",
     "envalid": "^4.2.2",
